--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,8 @@ dependencies {
 //these we added so we prevent the app from crashing when we click the image on the profile screen
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //for the image shape
+    implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
