--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,21 +13,23 @@
         android:theme="@style/Theme.BeautyStop"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".view.adapter.SplashActivity"
+            android:name=".view.SplashActivity"
+            android:theme="@style/AppTheme.Splash"
+
+
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.identity.RegisterActivity"
+            android:name=".view.RegisterActivity"
             android:exported="true">
 
         </activity>
         <activity
-            android:name=".view.identity.LoginActivity"
+            android:name=".view.LoginActivity"
             android:exported="true" />
         <activity
             android:name=".view.MainActivity"
