--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,7 @@ dependencies {
     //for the image shape
     implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
     implementation 'androidx.cardview:cardview:1.0.0'
+
+
+    implementation "androidx.core:core-ktx:'1.6.0'"
 }
