--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
     implementation 'androidx.cardview:cardview:1.0.0'
 
-
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
     implementation "androidx.core:core-ktx:'1.6.0'"
 }
